//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package core.instance;

option java_package = "com.sandpolis.core.instance";
option optimize_for = CODE_SIZE;

// An enumeration of all possible instance types.
enum InstanceType {

    // An application connected to the Sandpolis network for debugging purposes
    CHARCOAL = 0;

    // An application that coordinates communication between clients and agents
    SERVER = 1;

    // An application that runs continuously on hosts in the Sandpolis network
    AGENT = 2;

    // An application used for managing agents and servers
    CLIENT = 3;

    // An application responsible for installing and updating other instances
    INSTALLER = 4;
}

// An enumeration of all official instance subtypes.
enum InstanceFlavor {

    // Only valid for charcoal and installer instances types
    NONE = 0;

    // The official Java-based server or agent instance
    VANILLA = 1;

    // The official cross-platform client instance
    MEGA = 2;

    // The official native client instance
    MICRO = 3;

    // The official terminal client instance
    ASCETIC = 4;

    // The official desktop client instance
    LIFEGEM = 5;

    // The official Android client instance
    SOAPSTONE = 6;

    // The official iOS client instance
    LOCKSTONE = 7;
}
